pms/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pms
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pms
    spec:
      nodeSelector:
        kubernetes.io/hostname: wedge.radoncanyon.com
      volumes:
      - name: media
        hostPath:
          path: /mnt/media
      - name: pms
        hostPath:
          path: /dockerfs/pms
      containers:
      - name: pms
        image: plexinc/pms-docker:public
        imagePullPolicy: Always
        volumeMounts:
        - name: pms
          subPath: config
          mountPath: /config
        - name: pms
          subPath: transcode
          mountPath: /transcode
        - name: media
          subPath: movies
          mountPath: /media/movies
          readOnly: true
        - name: media
          subPath: tv
          mountPath: /media/tv
          readOnly: true
        - name: media
          subPath: anime
          mountPath: /media/anime
          readOnly: true
        - name: media
          subPath: music
          mountPath: /media/music
          readOnly: true
        ports:
        - name: pms
          containerPort: 32400
        livenessProbe:
          httpGet:
            path: /web/index.html
            port: pms
          initialDelaySeconds: 60
          periodSeconds: 5
