pms/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pms
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - plex.desertbluffs.com
    secretName: pms-tls
  rules:
  - host: plex.desertbluffs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: pms
          servicePort: 80
